# Mealplan-Service

./: .dockerignore  .gitignore  Dockerfile  README.md  mealplanservice.py  pyproject.toml  requirements.txt
app/: server.py
mealPlanTests/: test_baseMealPlanDB.py
src/: server.py
src/mealplanservice/: SQL_mealplan.py  __init__.py  mealPlanManager.py  mealPlanService.py  version.py
src/mealplanservice.egg-info/: SOURCES.txt
src/mealplanservice/database/: BaseMealPlanDB.py  SQLMealPlanDB.py  __init__.py  baseMealPlanDB.py  datastructure.py  schema.py  visualisering.json
src/mealplanservice/database/model/: sql.py
src/service/: mealPlanManager.py  mealplanService.py
src/service/database/: baseMealPlanDB.py  schema.py
tests/: test_baseMealPlanDB.py
