[project]
dynamic = ["version"]
name = "recipeservice"
authors = [
  { name="Peter Lauridsen", email="plauri20@student.aau.dk" },
  { name="Martin Jacobsen", email="mjacob20@student.aau.dk" },
  { name="Kristoffer Gregersen", email="kmgr20@student.aau.dk" },
]
description = "Description"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Uncomment if you need a script.
# [project.scripts]
# script_name = "package_name:func"

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/mealplanservice/version.py"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["mealplanservice*"]